# aps3e-

./: .gitignore  README.md  gradle.properties  log_aps3e.txt  log_exec_explanation.txt  log_exec_full.txt
app/: build.gradle  (+1 more)
app/src/main/cpp/: CMakeLists.txt  aps3e_emu.cpp  aps3e_rp3_impl.cpp  aps3e_rp3_impl.h  emulator.cpp  emulator.h  emulator_aps3e.cpp  emulator_aps3e.h
app/src/main/cpp/rpcs3/: CMakeLists.txt
app/src/main/cpp/rpcs3/Utilities/: Config.h  File.cpp  Thread.cpp  stack_trace.cpp  stack_trace.h
app/src/main/cpp/rpcs3/buildfiles/cmake/: ConfigureCompiler.cmake  FindWayland.cmake  FindWolfSSL.cmake  FindZLIB.cmake
app/src/main/cpp/rpcs3/rpcs3/: VKGSRender.vcxproj  VKGSRender.vcxproj.filters  emucore.vcxproj  emucore.vcxproj.filters  headless_application.cpp  main.cpp
app/src/main/cpp/rpcs3/rpcs3/Crypto/: utils.cpp  utils.h
app/src/main/cpp/rpcs3/rpcs3/Emu/: CMakeLists.txt  System.cpp  System.h  games_config.cpp  localized_string.cpp  localized_string_id.h  localized_string_id.inc  system_config.h  system_config_types.cpp  system_config_types.h
app/src/main/cpp/rpcs3/rpcs3/Emu/Audio/Cubeb/: CubebBackend.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/: PPUThread.cpp  SPULLVMRecompiler.cpp  SPUThread.h
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/Modules/: cellMic.cpp  cellMic.h
app/src/main/cpp/rpcs3/rpcs3/Emu/Cell/lv2/: sys_process.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/Io/: RB3MidiDrums.cpp  RB3MidiDrums.h  RB3MidiGuitar.cpp  RB3MidiGuitar.h  RB3MidiKeyboard.cpp  RB3MidiKeyboard.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/: RSXZCULL.cpp  RSXZCULL.h  color_utils.h  display.h  rsx_cache.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Common/: TextureUtils.cpp  buffer_stream.hpp  io_buffer.h  ranged_map.hpp  unordered_map.hpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Core/: RSXContext.cpp  RSXContext.h  RSXDisplay.h  RSXDrawCommands.cpp  RSXDriverState.h  RSXReservationLock.hpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/GL/: GLDMA.cpp  GLDMA.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/GL/glutils/: blitter.cpp  blitter.h  buffer_object.cpp  buffer_object.h  capabilities.cpp  capabilities.h  common.h  image.cpp  image.h  program.cpp  program.h  ring_buffer.cpp  ring_buffer.h  sampler.cpp  sampler.h  state_tracker.hpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/GL/upscalers/fsr1/: fsr_pass.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Host/: MM.cpp  MM.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/NV47/FW/: draw_call.cpp  draw_call.hpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/NV47/HW/: common.cpp  nv0039.cpp  nv3089.cpp  nv308a.cpp  nv406e.cpp  nv4097.cpp  nv4097.h  nv47_sync.hpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Overlays/: overlay_animated_icon.cpp  overlay_fonts.cpp  overlay_fonts.h  overlay_loading_icon.hpp  overlay_manager.cpp  overlay_manager.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Overlays/HomeMenu/: overlay_home_menu_main_menu.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Program/: RSXOverlay.h  SPIRVCommon.cpp  ShaderInterpreter.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Program/Assembler/: FPASM.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Program/GLSLInterpreter/: FragmentInterpreter.glsl  VertexInterpreter.glsl
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Program/GLSLSnippets/: GPUDeswizzle.glsl  OverlayRenderFS.glsl  OverlayRenderVS.glsl
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/Program/GLSLSnippets/RSXProg/: RSXDefines2.glsl  RSXFragmentPrologue.glsl  RSXFragmentTextureDepthConversion.glsl  RSXFragmentTextureMSAAOps.glsl  RSXFragmentTextureMSAAOpsInternal.glsl  RSXFragmentTextureOps.glsl  RSXROPEpilogue.glsl  RSXROPPrologue.glsl  RSXVertexFetch.glsl
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/VK/: VKCommonPipelineLayout.cpp  VKCommonPipelineLayout.h  VKCompute.cpp  VKCompute.h  VKDraw.cpp  VKGSRender.cpp  VKGSRender.h  VKGSRenderTypes.hpp  VKHelpers.cpp  VKOverlays.cpp  VKPFNTable.h  VKPFNTableEXT.h  VKPipelineCompiler.cpp  VKPipelineCompiler.h  VKPresent.cpp  VKProcTable.h  VKProgramPipeline.cpp  VKProgramPipeline.h  VKQueryPool.h  VKRenderPass.cpp  VKRenderTargets.cpp  VKRenderTargets.h  VKResolveHelper.h  VKTexture.cpp  VKTextureCache.cpp  VKVertexBuffers.cpp  VKVertexProgram.cpp  VulkanAPI.cpp  VulkanAPI.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/VK/upscalers/: fsr_pass.h
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/VK/upscalers/fsr1/: fsr_pass.cpp
app/src/main/cpp/rpcs3/rpcs3/Emu/RSX/VK/vkutils/: barriers.cpp  buffer_object.cpp  buffer_object.h  commands.cpp  data_heap.cpp  data_heap.h  descriptors.cpp  device.cpp  ex.cpp  ex.h  framebuffer_object.hpp  garbage_collector.h  image.cpp  image.h  image_helpers.cpp  instance.cpp  instance.h  memory.cpp  sampler.cpp  scratch.cpp  scratch.h  swapchain.cpp  swapchain_android.hpp  swapchain_core.h  swapchain_macos.hpp
app/src/main/cpp/rpcs3/rpcs3/Input/: pad_thread.cpp
app/src/main/cpp/rpcs3/rpcs3/Loader/: iso.cpp  iso.h
app/src/main/cpp/rpcs3/rpcs3/rpcs3qt/: gui_application.cpp
app/src/main/cpp/rpcs3/rpcs3/tests/: test_address_range.cpp  test_rsx_cfg.cpp  test_rsx_fp_asm.cpp
app/src/main/cpp/rpcs3/rpcs3/util/: asm.hpp  bless.hpp  media_utils.cpp  simd.hpp
(+44 files in other folders)
